--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             </div>
         </form>
     </header>
+    <div>
+        <h1 id="loadingText">LOADING...</h1>
+    </div>
     <section>
         <!-- <div class="loader hidden"></div> -->
         <div id="output">
@@ -33,9 +36,9 @@
             </ul>
         </div>
 
-        <div>
+        <!-- <div>
             <h1 id="loadingText">LOADING...</h1>
-        </div>
+        </div> -->
 
     </section>
     <script src=' script.js '></script>
