Adjust css to remove unnessecary positioning

--- a/index.html
+++ b/index.html
@@ -15,31 +15,23 @@
 <body>
     <header class="wrap">
         <h1 class="title_logo">Wiki Search</h1>
-        <form id="addPost">
-            <input class="input" type="search" placeholder="Type to search">
-            </input>
-            <div class="buttons">
-                <button class="searchBtn" type='submit'>
-                    <i class="fa fa-search" aria-hidden="true"></i>
-                </button>
-            </div>
-        </form>
     </header>
+    <form id="addPost">
+        <input class="input" type="search" placeholder="Type to search" />
+        <button class="searchBtn" type='submit'>
+            <i class="fa fa-search" aria-hidden="true"></i>
+        </button>
+    </form>
+
     <div>
         <h1 id="loadingText">LOADING...</h1>
     </div>
     <section>
-        <!-- <div class="loader hidden"></div> -->
         <div id="output">
             <ul>
 
             </ul>
         </div>
-
-        <!-- <div>
-            <h1 id="loadingText">LOADING...</h1>
-        </div> -->
-
     </section>
     <script src=' script.js '></script>
 </body>
